<resources>
    <string name="app_name">Society</string>
    <string name="Application_logo">Application logo</string>
    <string name="arrow_button">Arrow button</string>
    <string name="numberVerify">Verify your phone number</string>

    <string name="email_hint">Email adders</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="singUpText">"Don't have an Account?"</string>
    <string name="singUpHere">Sing up here</string>
    <string name="enterName">Full name </string>
    <string name="phoneNumber">Number</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="haveAnAccount">Have an Account?</string>
    <string name="pleaseVerifyOtpTile">Verify number</string>
    <string name="continueTextBtn">Continue</string>
    <string name="we_will_send">We will send otp on your number to verify</string>
    <string name="enter_the_otp">Enter the otp code verify your phone number</string>
    <string name="enterSociety">Society name</string>
    <string name="cityName">City name</string>
    <string name="pin_code">Pin code</string>
    <string name="enter_room_no">Enter room no</string>
    <string name="create_account">Create account</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>
    <string name="user_number">User number</string>
    <string name="user_name">User name</string>

    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="menu">Drawer menu</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="account">Profile</string>
    <string name="Announcement">Announcement</string>

    <style name="imgRound">
        <item name="cornerSize">50%</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="house">House no</string>
    <string name="personalDetails">Personal details</string>
    <string name="gander">Gender</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="update_profile">Update profile</string>
    <string name="save">Save</string>
    <string name="error_image">Error image</string>
    <string name="announcement_images">Announcement images</string>
    <string name="announcement_banner">Add Banner</string>
    <string name="announcement_title">Title</string>
    <string name="announcement_content">Content</string>
    <string name="announcement_category">Category</string>
    <string name="announcement_share">Announcement Now</string>
    <string name="_views">0 views</string>
    <string name="post_load">Make Announcement</string>
    <string name="society_members">Members</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_details">Profile</string>

    <string name="enter_otp">Enter otp</string>
    <string name="call">Call</string>
    <string name="_00_00_00_00_00_00">Date 00/00/00 Time 00:00:00</string>
    <string name="profile">Profile</string>
    <string name="society_post">Announcement</string>
    <string name="time">Time</string>


</resources>