<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Fragment.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp">

        <ProgressBar
            android:id="@+id/profileProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/profileErrorImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/error_image"
            android:src="@drawable/error_img"
            android:visibility="gone" />



        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/viewProfileImg"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img"
                    app:shapeAppearance="@style/imgRound" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp">

                    <TextView
                        android:id="@+id/viewUserNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/user_name"
                        android:textColor="@color/blue"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/viewSocietyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/enterSociety"
                        android:textColor="@color/greyWhite"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/viewCategoryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/category"
                android:textColor="@color/greyWhite"
                android:paddingHorizontal="5dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/viewEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/email_hint"
                android:paddingHorizontal="5dp"
                android:textColor="@color/greyWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profileEdit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/edit_profile_icon"
                    app:iconGravity="textStart"
                    android:text="@string/edit"
                    android:singleLine="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/societyMembers"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/group_users"
                    android:layout_marginStart="8dp"
                    app:iconGravity="textStart"
                    android:singleLine="true"
                    android:text="@string/society_members"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logOut"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/logout_icon"
                    app:iconGravity="textStart"
                    android:layout_marginStart="8dp"
                    android:singleLine="true"
                    android:text="@string/logout"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/showPostProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/blue"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/showPostNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/announcement_images"
                    android:src="@drawable/box_empty"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profilePostAll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>