<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".Activity.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/layout_shape"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="match_parent">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/createAccountBtn"
            android:paddingBottom="15dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_icon"
                    android:scaleType="centerCrop"
                    app:shapeAppearance="@style/imgRound"
                    android:background="@drawable/edit_shape"
                    />

                <EditText
                    android:id="@+id/userName"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/enterName"
                    android:paddingHorizontal="18sp"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/greyWhite"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/profileEmail"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/email_hint"
                    android:paddingHorizontal="18sp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/greyWhite"
                    android:textColor="@color/blue"
                    />

                <EditText
                    android:id="@+id/societyName"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/enterSociety"
                    android:paddingHorizontal="18sp"
                    android:singleLine="true"
                    android:textColorHint="@color/greyWhite"
                    android:textColor="@color/blue"
                    android:inputType="text"
                    />


                <EditText
                    android:id="@+id/pinCode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/pin_code"
                    android:paddingHorizontal="18sp"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:inputType="number"
                    android:textColorHint="@color/greyWhite"
                    android:textColor="@color/blue"
                    />
                <EditText
                    android:id="@+id/houseNo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_shape"
                    android:hint="@string/house"
                    android:paddingHorizontal="18sp"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:inputType="number"
                    android:textColorHint="@color/greyWhite"
                    android:textColor="@color/blue"
                    />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    >
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry" />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry" />
                </RadioGroup>




            </LinearLayout>


        </ScrollView>



        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="18sp"/>


    </RelativeLayout>

</LinearLayout>