<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MemberActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        >
        <ImageView
            android:id="@+id/membersArrowBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/announcement_images"
            android:src="@drawable/arrow_icon"
            app:tint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/society_members"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"/>
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/membersProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/blue"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/membersBox_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/error_image"
        android:src="@drawable/box_empty"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allMembersList"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

</RelativeLayout>